force-app/main/default/objects/DeliveryRoute__c/DeliveryRoute__c.object-meta.xml
<CustomObject>
    <label>Delivery Route</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>