force-app/main/default/objects/DeliveryRoute__c/fields/DeliveryRouteGroup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouteGroup__c</fullName>
    <label>Delivery Route Group</label>
    <referenceTo>DeliveryRouteGroup__c</referenceTo>
    <relationshipLabel>Delivery Routes</relationshipLabel>
    <relationshipName>DeliveryRoutes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>