force-app/main/default/objects/DeliveryRoute__c/fields/EndDepot__c.field-meta.xml
<CustomField>
    <fullName>EndDepot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>End Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Delivery Routes End</relationshipLabel>
    <relationshipName>DeliveryRoutesEnd</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>