force-app/main/default/objects/DeliveryRoute__c/fields/EndDepotIndex__c.field-meta.xml
<CustomField>
    <fullName>EndDepotIndex__c</fullName>
    <label>End Depot Index</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>