force-app/main/default/objects/DeliveryRoute__c/fields/MaximumRouteTime__c.field-meta.xml
<CustomField>
    <fullName>MaximumRouteTime__c</fullName>
    <label>Maximum Route Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>