force-app/main/default/objects/DeliveryRoute__c/fields/MaxRouteTime__c.field-meta.xml
<CustomField>
    <fullName>MaxRouteTime__c</fullName>
    <label>Max Route Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>