force-app/main/default/objects/DeliveryRoute__c/fields/RtePref__c.field-meta.xml
<CustomField>
    <fullName>RtePref__c</fullName>
    <label>Rte Pref</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>