force-app/main/default/objects/DeliveryRoute__c/fields/SkillSet__c.field-meta.xml
<CustomField>
    <fullName>SkillSet__c</fullName>
    <label>Skill Set</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>