force-app/main/default/objects/DeliveryRoute__c/fields/StartDepot__c.field-meta.xml
<CustomField>
    <fullName>StartDepot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Start Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Delivery Routes Start</relationshipLabel>
    <relationshipName>DeliveryRoutesStart</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>