force-app/main/default/objects/DeliveryRoute__c/fields/StartDepotIndex__c.field-meta.xml
<CustomField>
    <fullName>StartDepotIndex__c</fullName>
    <label>Start Depot Index</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>