force-app/main/default/objects/DeliveryRoute__c/fields/StartLocation__c.field-meta.xml
<CustomField>
    <fullName>StartLocation__c</fullName>
    <label>Start Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>