force-app/main/default/objects/DeliveryRoute__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>