force-app/main/default/objects/DeliveryRoute__c/fields/VehicleCapacity__c.field-meta.xml
<CustomField>
    <fullName>VehicleCapacity__c</fullName>
    <label>Vehicle Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>