force-app/main/default/objects/DeliveryRoute__c/validationRules/RestrictRouteIdLength.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictRouteIdLength</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 10</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Route Id is limited to 10 characters.</errorMessage>
</ValidationRule>