force-app/main/default/objects/DeliveryRoute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartTime__c</columns>
    <columns>MaximumRouteTime__c</columns>
    <columns>VehicleCapacity__c</columns>
    <columns>StartLocation__c</columns>
    <columns>RtePref__c</columns>
    <columns>SkillSet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>