force-app/main/default/objects/DeliveryRoute__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Preference__c</columns>
    <columns>StartTime__c</columns>
    <columns>MaxRouteTime__c</columns>
    <columns>VehicleCapacity__c</columns>
    <columns>StartDepot__c</columns>
    <columns>EndDepot__c</columns>
    <columns>SkillSet__c</columns>
    <columns>DeliveryRouteGroup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>